<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome">A car is an expensive toy</string>
    <string name="app_name">Car Tax 1.0</string>
    <string name="graph_button">Show graph</string>
    <string name="provider_name">Some random data</string>
    <string name="market_downdoad_alternative">Android Market not available, trying to download from chartdroid</string>
    <string name="car_name">Car</string>
    <string name="fuel_type">Diesel</string>
    <string name="car_year">Year</string>
    <string name="chart_title">Car anual cost/km</string>
    <string name="chart_xlabel">1000 km</string>
    <string name="chart_ylabel">Cost</string>
    <string name="car_co2">CO^2 g/km</string>
    <string name="car_consumption">l/100km</string>
    <string name="car_heading">Please fill in the car data</string>
    <string name="add_car">Add car</string>
    <string name="help">About</string>
    <string name="add_edit_car">Add or edit car</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="car_weight">Weight</string>
    <string name="inv_car_name">Invalid car name</string>
    <string name="help_text">Thank you for trying this application!\n\nThis application calculates how much a car will cost annually based on how much it is used. The base cost is calculated based  on age, fuel consumption, carbon dioxide emission value and weight. A new car can be added by pressing the menu button. Currently the algorithm only calculates according to Finnish regulations and the cost does not include insurance costs. However, support for other countries and more input data can be added in future versions.\n\nWe hope you will enjoy this app and that it will help you make good decisions (if this is even possible in the business of buying cars).</string>
    <string name="car_updated">%s successfully updated</string>
    <string name="delete_confirmation">Do you want to delete %s and all its data from the list ?</string>
</resources>
